# ferricel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LIMITATIONS.md  Makefile  README.md  cel-spec-version.yaml  conformance-timestamps.txt  deny.toml  mdbook-version.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build-ferricel-cli.yml  cel-spec-update-check.yml  ci.yml  mdbook-pages.yml  release.yml  security-audit-cron.yml  security-audit-reactive.yml  updatecli.yml
conformance/: Cargo.toml  README.md  build.rs
conformance/tests/: conformance.rs
conformance/tests/common/: mod.rs  proto_gen.rs  runner.rs  thresholds.rs  types.rs
crates/conformance/: Cargo.toml  README.md  build.rs  thresholds.toml
crates/conformance/tests/: conformance.rs
crates/conformance/tests/common/: mod.rs  runner.rs  types.rs
crates/ferricel/: Cargo.toml
crates/ferricel-core/: Cargo.toml  build.rs
crates/ferricel-core/src/: schema.rs
crates/ferricel-core/src/compiler/: expr.rs  literals.rs  vap.rs
crates/ferricel-core/src/compiler/functions/: extensions.rs  optional.rs  strings.rs  temporal.rs
crates/ferricel-core/src/compiler/functions/ext/: bind.rs  comprehensions.rs  regex.rs
crates/ferricel-core/src/compiler/functions/kubernetes/: cidr.rs  format.rs  ip.rs  lists.rs  quantity.rs  regex.rs
crates/ferricel-core/tests/: builder_chain_tests.rs  common.rs  in_operator_tests.rs  list_tests.rs  namespace_tests.rs  string_tests.rs  struct_tests.rs  vap_tests.rs  variable_tests.rs
crates/ferricel-core/tests/ext/: comprehensions.rs  encoders.rs  lists.rs  math.rs  mod.rs  regex.rs  strings.rs
crates/ferricel-core/tests/kubernetes/: cidr.rs  mod.rs  quantity.rs  semver.rs
crates/ferricel-types/src/: lib.rs  proto.rs
crates/ferricel/src/: main.rs
crates/ferricel/src/cmd/: extensions.rs  run.rs
crates/ferricel/tests/: e2e.rs
crates/ferricel/tests/fixtures/: empty.proto
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: array.rs  builder.rs  deserialization.rs  extensions.rs  lib.rs  logical.rs  membership.rs  serialization.rs  temporal.rs  types.rs
crates/runtime/src/ext/: encoders.rs  math.rs  sets.rs  strings.rs
crates/runtime/src/kubernetes/: quantity.rs  semver.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  cel-compliance.md  compile-cel-to-wasm.md  compile-vap-to-wasm.md  host-extensions.md  introduction.md  run-cel-wasm.md  run-vap-wasm.md  vap.md  wasm-spec.md
example/: Cargo.toml
example/src/: parser.rs  test_all_macro.rs  test_api.rs  test_comprehension_structure.rs  test_comprehensions.rs  test_float_parse.rs  test_has.rs  test_literal.rs  test_operators.rs  test_program.rs  test_select_test.rs  test_simple_list.rs  test_timestamp.rs
ferricel/: Cargo.toml  README.md
ferricel-core/: Cargo.toml  README.md  build.rs
ferricel-core/src/: compiler.rs  inspect.rs  lib.rs  runtime.rs  schema.rs
ferricel-core/src/compiler/: access.rs  collections.rs  context.rs  expr.rs  helpers.rs  literals.rs  mod.rs  operators.rs  vap.rs
ferricel-core/src/compiler/functions/: builder.rs  conversions.rs  extensions.rs  mod.rs  optional.rs  strings.rs
ferricel-core/src/compiler/functions/ext/: bind.rs  block.rs  comprehensions.rs  encoders.rs  lists.rs  math.rs  mod.rs  poly.rs  sets.rs  strings.rs
ferricel-core/src/compiler/functions/kubernetes/: mod.rs  semver.rs  url.rs
ferricel-core/tests/: arithmetic_tests.rs  common.rs  compiler_tests.rs  container_tests.rs  double_tests.rs  ext_tests.rs  extension_tests.rs  extensions_used_tests.rs  has_tests.rs  in_operator_tests.rs  integration.rs  json_output_tests.rs  kubernetes_tests.rs  list_tests.rs  namespace_tests.rs  numeric_tests.rs  string_tests.rs  struct_tests.rs  vap_tests.rs  variable_tests.rs
ferricel-core/tests/common/: mod.rs
ferricel-core/tests/ext/: block.rs  comprehensions.rs  encoders.rs  lists.rs  math.rs  mod.rs  poly.rs  regex.rs  sets.rs  strings.rs
ferricel-core/tests/kubernetes/: cidr.rs  ip.rs  lists.rs  mod.rs  quantity.rs  regex.rs  semver.rs
ferricel-types/: Cargo.toml  README.md  build.rs
ferricel-types/proto/: bindings.proto
ferricel-types/src/: extensions.rs  functions.rs  lib.rs
ferricel/src/: cli.rs  cmd.rs  compiler.rs  main.rs  runtime.rs
ferricel/src/cmd/: build.rs  inspect.rs  run.rs
ferricel/src/cmd/inspect/: cel.sublime-syntax
ferricel/tests/: e2e.rs
ferricel/tests/fixtures/: empty_types.pb  simple.proto  simple_types.pb
hack/: conformance-table.py
runtime/: Cargo.toml
runtime/src/: arithmetic.rs  array.rs  builder.rs  bytes.rs  chrono_helpers.rs  comparison.rs  conversion.rs  deserialization.rs  error.rs  extensions.rs  field_access.rs  globals.rs  helpers.rs  iter.rs  lib.rs  logical.rs  map.rs  membership.rs  memory.rs  optional.rs  proto_wire.rs  serialization.rs  string.rs  temporal.rs  types.rs  vap.rs
runtime/src/ext/: encoders.rs  lists.rs  math.rs  mod.rs  poly.rs  regex.rs  sets.rs  strings.rs
runtime/src/kubernetes/: cidr.rs  dispatch.rs  format.rs  ip.rs  lists.rs  mod.rs  quantity.rs  regex.rs  semver.rs  url.rs
runtime/src/logging/: drain.rs  event.rs  macros.rs  mod.rs
updatecli/: cel-spec.yaml  cross.yaml  mdbook.yaml  syft.yaml  taplo.yaml
