[workspace]
members = [
  "conformance",
  "ferricel",
  "ferricel-core",
  "ferricel-types",
  "runtime",
]
resolver = "2"

[workspace.package]
license    = "MIT"
repository = "https://github.com/flavio/ferricel"
version    = "0.1.0"

[workspace.dependencies]
anyhow         = "1.0"
base64         = "0.22"
ferricel-core  = { version = "0.1.0", path = "ferricel-core" }
ferricel-types = { version = "0.1.0", path = "ferricel-types" }
prost          = "0.14"
prost-types    = "0.14"
rstest         = "0.26"
semver         = "1"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
slog           = "2.8"
slog-term      = "2.9"
thiserror      = "2"
