[package]
edition = "2024"
name    = "conformance"
version = "0.1.0"

[dependencies]
base64         = { workspace = true }
ferricel-core  = { path = "../ferricel-core" }
ferricel-types = { path = "../ferricel-types" }
prost          = { workspace = true }
prost-types    = { workspace = true }
rayon          = "1.10"
serde          = { workspace = true }
serde_json     = { workspace = true }
slog           = { workspace = true }
slog-term      = { workspace = true }

[build-dependencies]
prost-build = "0.14"
