[package]
name    = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cel    = { workspace = true }

[[bin]]
name = "parser"
path = "src/parser.rs"

[[bin]]
name = "test_api"
path = "src/test_api.rs"

[[bin]]
name = "test_literal"
path = "src/test_literal.rs"

[[bin]]
name = "test_operators"
path = "src/test_operators.rs"

[[bin]]
name = "test_program"
path = "src/test_program.rs"

[[bin]]
name = "test_has"
path = "src/test_has.rs"

[[bin]]
name = "test_select_test"
path = "src/test_select_test.rs"

[[bin]]
name = "test_all_macro"
path = "src/test_all_macro.rs"

[[bin]]
name = "test_comprehensions"
path = "src/test_comprehensions.rs"

[[bin]]
name = "test_comprehension_structure"
path = "src/test_comprehension_structure.rs"

[[bin]]
name = "test_simple_list"
path = "src/test_simple_list.rs"

[[bin]]
name = "test_float_parse"
path = "src/test_float_parse.rs"
