[package]
edition     = "2024"
name        = "ferricel-core"
version     = { workspace = true }
description = "Core compiler and runtime library for ferricel (CEL → WASM)"
license     = { workspace = true }
repository  = { workspace = true }
build       = "build.rs"
autotests   = false
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    # Pre-built runtime WASM, placed here by `make publish-prep` before publishing.
    # Not tracked in git (covered by the workspace .gitignore `*.wasm` rule).
    "runtime.wasm",
]

[dependencies]
anyhow         = { workspace = true }
cel            = "0.13"
ferricel-types = { workspace = true }
prost          = { workspace = true }
prost-types    = { workspace = true }
serde_json     = { workspace = true }
slog           = { workspace = true }
walrus         = "0.26"
wasmtime       = "43.0"

[dev-dependencies]
rstest    = { workspace = true }
slog-term = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"
