[package]
autotests = false
build = "build.rs"
description = "Core compiler and runtime library for ferricel (CEL → Wasm)"
edition = "2024"
include = [
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  # Pre-built runtime Wasm, placed here by `make publish-prep` before publishing.
  # Not tracked in git (covered by the workspace .gitignore `*.wasm` rule).
  "runtime.wasm",
]
license = { workspace = true }
name = "ferricel-core"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow         = { workspace = true }
cel            = "0.13"
ferricel-types = { workspace = true }
prost          = { workspace = true }
prost-types    = { workspace = true }
serde_json     = { workspace = true }
slog           = { workspace = true }
walrus         = "0.26"
wasmtime       = "43.0"

[dev-dependencies]
rstest    = { workspace = true }
slog-term = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"
