[package]
edition = "2024"
name    = "ferricel-types"
version = "0.1.0"

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
strum       = { version = "0.28", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"
