[package]
edition     = "2024"
name        = "ferricel-types"
version     = { workspace = true }
description = "Shared type definitions for the ferricel CEL compiler"
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
strum       = { version = "0.28", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"
