[package]
description = "Shared type definitions for the ferricel CEL compiler"
edition     = "2024"
license     = { workspace = true }
name        = "ferricel-types"
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
strum       = { version = "0.28", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"
