[package]
edition     = "2024"
name        = "ferricel"
version     = { workspace = true }
description = "CLI tool to compile CEL expressions to WASM"
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow         = { workspace = true }
clap           = { version = "4.5", features = ["derive"] }
ferricel-core  = { workspace = true }
ferricel-types = { workspace = true }
prost          = { workspace = true }
prost-types    = { workspace = true }
slog           = { workspace = true }
slog-term      = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile   = "3.27"
