[package]
description = "CLI tool to compile CEL expressions to Wasm"
edition     = "2024"
license     = { workspace = true }
name        = "ferricel"
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
anyhow         = { workspace = true }
clap           = { version = "4.5", features = ["derive"] }
ferricel-core  = { workspace = true }
ferricel-types = { workspace = true }
prost          = { workspace = true }
prost-types    = { workspace = true }
serde_json     = { workspace = true }
slog           = { workspace = true }
slog-term      = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
rstest     = { workspace = true }
tempfile   = "3.27"
