[package]
description = "CLI tool to compile CEL expressions to Wasm"
edition     = "2024"
license     = { workspace = true }
name        = "ferricel"
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow         = { workspace = true }
clap           = { version = "4.6", features = ["derive"] }
ferricel-core  = { workspace = true, features = ["k8s-vap"] }
ferricel-types = { workspace = true }
k8s-openapi    = { workspace = true, features = ["v1_35"] }
prost          = { workspace = true }
prost-types    = { workspace = true }
serde_json     = { workspace = true }
slog           = { workspace = true }
slog-term      = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
rstest     = { workspace = true }
tempfile   = "3.27"
