[package]
edition = "2024"
name    = "runtime"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow         = { workspace = true }
base64         = { workspace = true }
bytes          = { workspace = true }
chrono         = { workspace = true }
chrono-tz      = { workspace = true }
ferricel-types = { path = "../ferricel-types" }
nom            = { workspace = true }
once_cell      = { workspace = true }
prost          = { workspace = true }
regex-lite     = { workspace = true }
url            = { workspace = true }
serde          = { workspace = true }
serde_bytes    = { workspace = true }
serde_json     = { workspace = true }
slog           = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
