[package]
edition = "2024"
name    = "runtime"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
  "alloc",
  "serde",
] }
chrono-tz = "0.10"
ferricel-types = { path = "../ferricel-types" }
nom = "8.0"
once_cell = "1.19"
prost       = { workspace = true }
prost-types = { workspace = true }
regex-lite = "0.1"
semver = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
slog = { workspace = true }
url = "2.5"

[dev-dependencies]
rstest = { workspace = true }
