[package]
edition = "2024"
license = { workspace = true }
name    = "conformance"
publish = false
version = "0.1.0"

[dependencies]
base64         = { workspace = true }
ferricel-core  = { path = "../ferricel-core" }
ferricel-types = { path = "../ferricel-types" }
k8s-openapi    = { workspace = true, features = ["v1_35"] }
prost          = { workspace = true }
prost-types    = { workspace = true }
rayon          = "1.12"
serde          = { workspace = true }
serde_json     = { workspace = true }
slog           = { workspace = true }
slog-term      = { workspace = true }
toml           = { version = "1.1", features = ["parse"] }

[build-dependencies]
prost-build = "0.14"
